# pm

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  skills-lock.json
backend/: AGENTS.md  pyproject.toml
backend/app/: main.py
backend/app/ai/: actions.py  client.py
backend/app/api/: __init__.py  ai.py  auth.py  board.py
backend/app/db/: __init__.py
backend/tests/: conftest.py  test_activity.py  test_ai.py  test_assignments.py  test_auth.py  test_board.py  test_board_members.py  test_board_stats.py  test_boards.py  test_checklists.py  test_columns.py  test_comments.py  test_due_dates.py  test_labels.py  test_main.py  test_priorities.py  test_profile.py  test_registration.py  test_search.py
docs/: DATABASE.md  PLAN.md  code_review.md  schema.json
frontend/src/app/: page.tsx
frontend/src/components/: ActivityFeed.tsx  BoardMembersPanel.test.tsx  BoardMembersPanel.tsx  BoardSelector.test.tsx  BoardSelector.tsx  CardDetailModal.test.tsx  CardDetailModal.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LabelManager.test.tsx  LabelManager.tsx  LoginForm.test.tsx  LoginForm.tsx  RegisterForm.test.tsx  RegisterForm.tsx  SearchBar.test.tsx  SearchBar.tsx  UserProfileModal.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
